# acesinit

./: CMakeLists.txt  Makefile.am  Makefile.in  README.md  ZMAT  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/aces2/: aces3_gtflgs.F  aces3_gtflgs.i  asv_ctl.c  cdiv.F  corchr.F  ecp_read_main.F  mkvmol.F  qsame.F  rdcchr.F  read_zmat_internal_coords.F  shellinf.F  wrpbas.F
src/aces23/: abort_job.F  binpack.F  c_line_parse.c  charges.F  det_segsizes.F  dgetri.F  ecpdef.F  ecpget.F  ecppar.F  find_jobflow.F  find_seg.F  fragment_orbitals.F  fshells_to_segments.F  geometry.F  init_data.F  init_machine_types.F  int_gen_init.F  joda_exit.F  mem_alloc.c  molread.F  nuclear_nuclear_gradient.F  nuclear_nuclear_repulsion_energy.F  rdebbs.F  scf_init.F  set_ecp_charges.F  set_segments.F  setup_ccbeg.F  shells_to_segments.F  user_sub.c  verify_aces2_params.F  wrecp.F  write_default_sial_programs.F  write_zmat_auto.F
src/aces_setup/: .project  setup_main.F  setup_main_entry.c
src/acesfin/: acesfin.F  acesfin_init.F  main.c  query_checkpoint.f
src/basis/: .project  array_constants.cpp  array_constants.h  sip.cpp  sip.h
src/geopt/: Makefile.in  aces2_joda_main.F  bltaotoso.F  convhess.F  dosyop.F  entry.F  fetchz.F  gentranmat.F  geopt.F  get_covalradii.F  gtflgs.F  minv.F  savori.F  summary.F  symmetry.F  tkstep.F  tstops.F  vib1.F
src/include/: basis_info.h  baslims.par  dropmo.h  ecp_info.h  f77_name.h  f_typedefs.h  flags.h  frag_def.h  int_gen_parms.h  jobf10July.h  mem_alloc.h  molstrct.com  mxatms.par  mxcbf.par  parallel_support.h  scflindep.h  trace.h
src/setup/: .project  io_utils.cpp  io_utils.h  setup_interface.cpp  setup_interface.f  setup_interface.h  setup_reader.cpp  setup_reader.h  setup_writer.cpp  setup_writer.h
src/symcor/: Makefile.in  prdegen.F  q2qprime.F  s_rotm.F  symcor.F
src/test/: GENBAS  ZMAT  default_jobflows  jobf10July.h  sial_config  test  test1.sial
src/utils/: block.cpp  block.h  block_shape.cpp  block_shape.h  init_file_print_main.cpp  query_checkpoint.cpp  query_checkpoint.f  query_checkpoint.h  sia_defs.h  worker_persistent_array_manager.cpp  worker_persistent_array_manager.h
