include $(top_srcdir)/aminclude.am
EXTRA_DIST = doxygen.cfg

bin_PROGRAMS=aces3init

AM_LDFLAGS=\
$(FLIBS)\
$(FCLIBS)\
$(OPENMP_FFLAGS)\
$(OPENMP_FCFLAGS)

ACES_SETUPFILES=\
./src/setup/io_utils.h\
./src/setup/setup_reader.h\
./src/setup/setup_interface.h\
./src/setup/setup_writer.h\
./src/setup/setup_reader.cpp\
./src/setup/setup_interface.cpp\
./src/setup/setup_writer.cpp\
./src/setup/io_utils.cpp

ACES_BASIS_FILES=\
./src/basis/array_constants.h\
./src/basis/array_constants.cpp\
./src/basis/sip.h\
./src/basis/sip.cpp


ACES3INIT_CPP_FLAGS = \
    -I${top_srcdir}/src/include

AM_CPPFLAGS = \
    $(ACES3INIT_CPP_FLAGS)


ACES3INIT_BLAS_SOURCEFILES=\
src/blas/dgemm.f\
src/blas/dgemv.f\
src/blas/sdot.f

ACES3INIT_SOURCEFILES=\
src/aces2/leq.F\
src/aces2/corchr.F\
src/aces2/normal.F\
src/aces2/trmblk.F\
src/aces2/angle.F\
src/aces2/qsame.F\
src/aces2/dacosx.F\
src/aces2/usqush.F\
src/aces2/com_shift.F\
src/aces2/errex.F\
src/aces2/atoi.F\
src/aces2/iszeq.F\
src/aces2/rdcchr.F\
src/aces2/cdiv.F\
src/aces2/dist.F\
src/aces2/atomnumb.F\
src/aces2/aces_exit.F\
src/aces2/sqush.F\
src/aces2/vec.F\
src/aces2/zero.F\
src/aces2/xgeopt.F\
src/aces2/cross.F\
src/aces23/wisch.F\
src/aces23/dlatrd.F\
src/aces23/dsytrd.F\
src/aces23/dlarft.F\
src/aces23/find_jobflow.F\
src/aces23/xdaxpy.F\
src/aces23/dgetf2.F\
src/aces23/dlamc2.F\
src/aces23/dlasr.F\
src/aces23/dgetri.F\
src/aces23/get_sial_config_params.F\
src/aces23/dlarfg.F\
src/aces23/ieeeck.F\
src/aces23/xdsyr2.F\
src/aces23/dorgql.F\
src/aces23/lsame.F\
src/aces23/dorgqr.F\
src/aces23/xdger.F\
src/aces23/ilaenv.F\
src/aces23/dtrtri.F\
src/aces23/dlamc5.F\
src/aces23/dlaev2.F\
src/aces23/dlascl.F\
src/aces23/dlapy2.F\
src/aces23/dlae2.F\
src/aces23/find_seg.F\
src/aces23/xdsymv.F\
src/aces23/dlamc4.F\
src/aces23/getstr.F\
src/aces23/xdgemv.F\
src/aces23/dlaswp.F\
src/aces23/abort_job.F\
src/aces23/dlaset.F\
src/aces23/dsterf.F\
src/aces23/reorder_rohf.F\
src/aces23/rdebbs.F\
src/aces23/dlamch.F\
src/aces23/dtrsm.F\
src/aces23/dlamc1.F\
src/aces23/dsytd2.F\
src/aces23/iblank.F\
src/aces23/binpack.F\
src/aces23/vmlgen.F\
src/aces23/dorg2l.F\
src/aces23/dlarf.F\
src/aces23/write_default_sial_programs.F\
src/aces23/geometry.F\
src/aces23/dgetrs.F\
src/aces23/xdcopy.F\
src/aces23/dlansy.F\
src/aces23/molread.F\
src/aces23/dlassq.F\
src/aces23/xdnrm2.F\
src/aces23/dgetrf.F\
src/aces23/shells_to_segments.F\
src/aces23/dlartg.F\
src/aces23/params.F\
src/aces23/dtrti2.F\
src/aces23/dorgtr.F\
src/aces23/dlanst.F\
src/aces23/dsteqr.F\
src/aces23/xdscal.F\
src/aces23/dtrmm.F\
src/aces23/dtrmv.F\
src/aces23/dorg2r.F\
src/aces23/verify_aces2_params.F\
src/aces23/nuclear_nuclear_repulsion_energy.F\
src/aces23/xerbla.F\
src/aces23/dlasrt.F\
src/aces23/xdsyr2k.F\
src/aces23/dlamc3.F\
src/aces23/nuclear_nuclear_gradient.F\
src/aces23/str_trimlen.F\
src/aces23/dlarfb.F\
src/aces23/xdswap.F\
src/aces23/reset_internal_system_data.F\
src/aces23/reorder_coefficients.F\
src/symcor/ener2fcm.F\
src/symcor/s_rotm.F\
src/symcor/trnfcm.F\
src/symcor/symadq.F\
src/symcor/schmidt.F\
src/symcor/assirr.F\
src/symcor/ener2grd.F\
src/symcor/dograd.F\
src/symcor/q2qprime.F\
src/symcor/traprj.F\
src/symcor/vibinf.F\
src/symcor/getgrd.F\
src/symcor/gschmidt.F\
src/symcor/trngrd.F\
src/symcor/prdegen.F\
src/symcor/rotprj.F\
src/symcor/chrtable.F\
src/geopt/frmlst.F\
src/geopt/cmp_angle.F\
src/geopt/polyprt0.F\
src/geopt/gather.F\
src/geopt/rotm.F\
src/geopt/qsdline.F\
src/geopt/stptr.F\
src/geopt/squez4.F\
src/geopt/itoa.F\
src/geopt/frag__init.F\
src/geopt/swpord.F\
src/geopt/siaz.F\
src/geopt/some_string_func.F\
src/geopt/filter.F\
src/geopt/vadd.F\
src/geopt/morsea.F\
src/geopt/outerp.F\
src/geopt/delta.F\
src/geopt/mtran2.F\
src/geopt/polyprt.F\
src/geopt/sitgrp.F\
src/geopt/f_remove.F\
src/geopt/assign_angles.F\
src/geopt/readgh.F\
src/geopt/ifindne.F\
src/geopt/curve.F\
src/geopt/scatter.F\
src/geopt/genrst.F\
src/geopt/xtrace.F\
src/geopt/check_pm_pair.F\
src/geopt/getptspqr.F\
src/geopt/frag__loop_through.F\
src/geopt/vecprd.F\
src/geopt/perpop2.F\
src/geopt/angmag.F\
src/geopt/fixori.F\
src/geopt/dcheck.F\
src/geopt/qsdminorts.F\
src/geopt/dosyop.F\
src/geopt/built_bndcrd.F\
src/geopt/getlambda.F\
src/geopt/piksr3.F\
src/geopt/compare.F\
src/geopt/expnd4.F\
src/geopt/idnmat.F\
src/geopt/symmet2.F\
src/geopt/chkint.F\
src/geopt/vminus.F\
src/geopt/image.F\
src/geopt/setxyz.F\
src/geopt/deang.F\
src/geopt/nrtsrv.F\
src/geopt/transp.F\
src/geopt/resolve.F\
src/geopt/idntfy_symeqv_atms.F\
src/geopt/piksr2.F\
src/geopt/alongx.F\
src/geopt/grpops.F\
src/geopt/stripdum.F\
src/geopt/frag__work.F\
src/geopt/sortc.F\
src/geopt/projdpd.F\
src/geopt/setd2xyz.F\
src/geopt/makgen.F\
src/geopt/izero.F\
src/geopt/gendih.F\
src/geopt/reflect.F\
src/geopt/projpld.F\
src/geopt/output.F\
src/geopt/dbond.F\
src/geopt/mxm.F\
src/geopt/iorgrp.F\
src/geopt/unitry.F\
src/geopt/perpop.F\
src/geopt/genrep.F\
src/geopt/projfcm.F\
src/geopt/mtransp.F\
src/geopt/vstat.F\
src/aces2/igetrec.F\
src/aces2/rdbas.F\
src/aces2/eig.F\
src/aces2/joda_main.F\
src/aces2/fnblnk.F\
src/aces2/f_strpbrk.F\
src/aces2/getcrec.F\
src/aces2/parse_irp_iarr.F\
src/aces2/gmetry.F\
src/aces2/xtor.F\
src/aces2/dputrec.F\
src/aces2/pertable.F\
src/aces2/wrpbas.F\
src/aces2/joda_post_processing.F\
src/aces2/f_getarg.F\
src/aces2/prep_dline_2.F\
src/aces2/aces_ja_fin.F\
src/aces2/rd_intcoord.F\
src/aces2/linblnk.F\
src/aces2/aces_init_rte.F\
src/aces2/iputrec.F\
src/aces2/jobarc_query.F\
src/aces2/shellinf.F\
src/aces2/putrec.F\
src/aces2/figio.F\
src/aces2/read_zmat_internal_coords.F\
src/aces2/parse_set_iarr.F\
src/aces2/gen_cart_coord.F\
src/aces2/dgetrec.F\
src/aces2/getxyz.F\
src/aces2/debug_zmat.F\
src/aces2/parsez.F\
src/aces2/symeqv.F\
src/aces2/gfname.F\
src/aces2/aces3_gtflgs.F\
src/aces2/getrec.F\
src/aces2/parse_int.F\
src/aces2/mkvmol.F\
src/aces2/aces_ja_init.F\
src/aces2/putcrec.F\
src/aces23/joda_exit.F\
src/aces23/joda_prep.F\
src/aces23/set_ecp_charges.F\
src/aces23/xddot.F\
src/aces23/int_gen_init.F\
src/aces23/remap.F\
src/aces23/dswap.F\
src/aces23/dsum.F\
src/aces23/xscal.F\
src/aces23/dcopy.F\
src/aces23/scf_init.F\
src/aces23/set_segments.F\
src/aces23/det_segsizes.F\
src/aces23/idamax.F\
src/aces23/dnrm2.F\
src/aces23/write_zmat_auto.F\
src/aces23/ddot.F\
src/aces23/init_machine_types.F\
src/aces23/init_data.F\
src/aces23/dsyev.F\
src/aces23/daxpy.F\
src/aces23/built_cmp2zmat.F\
src/symcor/grad2fcm.F\
src/symcor/setgrd.F\
src/symcor/aces_ja_truncate.F\
src/symcor/init_fd.F\
src/symcor/upd_fd.F\
src/symcor/collect.F\
src/symcor/sort2.F\
src/symcor/isrchne.F\
src/symcor/setpts.F\
src/symcor/isrcheq.F\
src/symcor/symcor.F\
src/symcor/setfcm.F\
src/symcor/paces_batch_stat.F\
src/symcor/trndip.F\
src/symcor/doener.F\
src/symcor/prtcoord.F\
src/geopt/dfiles.F\
src/geopt/gen_approx_freq.F\
src/geopt/irreps.F\
src/geopt/folowdflt.F\
src/geopt/symmetry_auto.F\
src/geopt/cnvrt2rad.F\
src/geopt/built_bgmtrx.F\
src/geopt/dihs.F\
src/geopt/analyze.F\
src/geopt/dumpcord.F\
src/geopt/symunqonly.F\
src/geopt/previb.F\
src/geopt/fetchz.F\
src/geopt/ishell.F\
src/geopt/gtflgs.F\
src/geopt/jso1.F\
src/geopt/init_ric_heap.F\
src/geopt/comvec.F\
src/geopt/built_langcrd.F\
src/geopt/stdort.F\
src/geopt/gentranmat.F\
src/geopt/flushs.F\
src/geopt/summary.F\
src/geopt/flowevfts.F\
src/geopt/trnops.F\
src/geopt/get_mopac_hess.F\
src/geopt/check4_180.F\
src/geopt/hupdate.F\
src/geopt/symdrv.F\
src/geopt/built_dihangcrd.F\
src/geopt/what2follow.F\
src/geopt/compare2.F\
src/geopt/proces_redintrnls.F\
src/geopt/procestep.F\
src/geopt/aces2_joda_main.F\
src/geopt/gen_new_ric.F\
src/geopt/is_connected.F\
src/geopt/tstops.F\
src/geopt/itndf.F\
src/geopt/buildb.F\
src/geopt/sortxyz.F\
src/geopt/convq.F\
src/geopt/trust_update.F\
src/geopt/archive.F\
src/geopt/angs2bohr.F\
src/geopt/chrtab.F\
src/geopt/geticfcm.F\
src/geopt/post_opt_update.F\
src/geopt/flowevfmin.F\
src/geopt/ssum.F\
src/geopt/modmatmul.F\
src/geopt/assign_xyz_labels.F\
src/geopt/convhess.F\
src/geopt/retrieve.F\
src/geopt/domorsexyz_ric.F\
src/geopt/procestep_xyz.F\
src/geopt/assign_cnnectvitis.F\
src/geopt/remove_360.F\
src/geopt/eval_qstlst_path.F\
src/geopt/nmr1.F\
src/geopt/scopy.F\
src/geopt/xdot.F\
src/geopt/mknddo.F\
src/geopt/chkeck.F\
src/geopt/inertia.F\
src/geopt/qstlst_or_evec.F\
src/geopt/built_angcrd.F\
src/geopt/project_fc.F\
src/geopt/adm.F\
src/geopt/minv.F\
src/geopt/get_covalradii.F\
src/geopt/bfgs.F\
src/geopt/geopt.F\
src/geopt/projec_ifc.F\
src/geopt/subgroup.F\
src/geopt/gen_rednintrnls.F\
src/geopt/rotcon.F\
src/geopt/evec_shift.F\
src/geopt/initp.F\
src/geopt/domorsezmt.F\
src/geopt/assign_dihls.F\
src/geopt/expnd2.F\
src/geopt/symunq.F\
src/geopt/cart2int_hess.F\
src/geopt/symmetry.F\
src/geopt/cshiftpri.F\
src/geopt/compkmat.F\
src/geopt/rm_backup.F\
src/geopt/assign_bonds.F\
src/geopt/savori.F\
src/geopt/flowqsdmin.F\
src/geopt/read_cntvtes.F\
src/geopt/identfy_fragments.F\
src/geopt/set_2unit_matrix.F\
src/geopt/jsd1.F\
src/geopt/xcopy.F\
src/geopt/vib1.F\
src/geopt/newraph.F\
src/geopt/write_warn_log.F\
src/geopt/xgemm.F\
src/geopt/tkstep.F\
src/geopt/msp_psb.F\
src/geopt/calmoi.F\
src/geopt/bohr2angs.F\
src/geopt/blkcpy.F\
src/geopt/assign_labels.F\
src/geopt/anlyshes.F\
src/geopt/hessout.F\
src/geopt/twidle.F\
src/geopt/nucrep.F\
src/geopt/powel.F\
src/geopt/jfc1.F\
src/geopt/setup.F\
src/geopt/bltaotoso.F\
src/geopt/forceout.F\
src/geopt/geomout.F\
src/geopt/entry.F\
src/aces2/c_exit.c\
src/aces2/c_memset.c\
src/aces2/f_strpbrk_core.c\
src/aces2/asv_ctl.c\
src/aces2/c_strncasecmp.c\
src/aces2/c_memmove.c\
src/aces2/icopy.c\
src/aces23/c_flush_stdout.c\
src/aces23/c_line_parse.c\
src/aces23/c_getenv.c\
src/aces23/mem_alloc.c\
src/aces23/user_sub.c\
src/geopt/f_remove_core.c\
src/geopt/c_system.c\
src/geopt/aces_malloc.c\
src/geopt/coarse_backup.c\
src/geopt/c_free.c\
src/geopt/c_adr.c\
src/geopt/coarse_restore.c\
src/include/f77_name.h\
src/include/dbugcom.h\
src/include/coarse_precious.h\
src/include/frag_def.h\
src/include/mem_alloc.h\
src/include/flags.h\
src/include/f_types.h\
src/include/sial_config_params.h\
src/include/int_gen_parms.h\
src/include/machine_types.h\
src/include/saved_data.h\
src/include/iachar.h\
src/include/dropmo.h\
src/include/jobarc.h\
src/include/hess.h\
src/include/trace.h\
src/include/parallel_support.h\
src/include/scflindep.h\
src/include/baslen.par\
src/include/mxcbf.par\
src/include/io_units.par\
src/include/linelen.par\
src/include/mxatms.par\
src/include/fnamelen.par\
src/include/baslims.par\
src/include/jobarc.com\
src/include/cbchar.com\
src/include/jodaflags.com\
src/include/flags2.com\
src/include/machsp.com\
src/include/molstrct.com\
src/include/icdacc.com\
src/include/control.com\
src/include/coord.com\
src/include/coord_4sortxyz.com\
src/include/flags.com\
src/include/coord_dup.com\
src/include/icore.com\
src/include/istart.com\
src/include/ric_heap.com\
src/include/basis_info.h\
src/aces_setup/setup_main.F


aces3init_SOURCES = \
    	$(ACES3INIT_SOURCEFILES)\
	$(ACES_SETUPFILES)\
    	$(ACES_BASIS_FILES)\
    	$(ACES3INIT_BLAS_SOURCEFILES)\
	src/aces_setup/setup_main_entry.c

aces3init_LDFLAGS = \
	$(FLIBS)\
	$(FCLIBS)


